--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Django==3.1
 djangorestframework==3.11.1
 python-dotenv==0.14.0
 psycopg2>=2.7
+pandas>=1.0.0
+sqlalchemy>=1.3.19
+requests==2.24.0
+lxml==4.5.2
+xlrd==1.2.0
