--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "eslint": "eslint .",
     "check-types": "tsc --noemit",
     "lint": "set -x; npm run eslint .; npm run check-types",
-    "fix": "set -x; prettier --write .; eslint --fix ."
+    "fix": "set -x; prettier --write .; eslint --fix .",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,11 +43,20 @@
     ]
   },
   "devDependencies": {
-    "eslint": "7.10.0",
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-essentials": "^6.0.22",
+    "@storybook/addon-links": "^6.0.22",
+    "@storybook/node-logger": "^6.0.22",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.22",
+    "babel-loader": "^8.1.0",
+    "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "react-is": "^16.13.1"
   },
   "husky": {
     "hooks": {
