--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -19,6 +20,7 @@
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "styled-components": "^5.2.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
