--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 click==7.1.2
 coreapi==2.3.3
 coreschema==0.0.4
+coverage~=5.3
 Django==3.1
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
