--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 click==7.1.2
 Django==3.1
 djangorestframework==3.11.1
+drf-yasg==1.17.1
 idna==2.10
 lxml==4.5.2
 mypy-extensions==0.4.3
