--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage~=5.3
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1
+django-filters==2.4.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
