--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "${DB_EXTERNAL_PORT}:5432"
     # Comment this volume section to spin up a new database every time you run docker-compose up
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -27,3 +27,6 @@ services:
       DB_NAME: jobhopper_dev
       DB_HOST: db
       WAIT_HOSTS: db:5432
+
+volumes:
+  db-data:
