--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -1,7 +1,20 @@
 FROM node:14.15-alpine
-WORKDIR /home/node/app
+ 
+# A directory within the virtualized Docker environment
+# Becomes more relevant when using Docker Compose later
+WORKDIR /usr/src/app
+ 
+# Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
+ 
+# Installs all node packages
 RUN npm install
+ 
+# Copies everything over to Docker environment
 COPY . .
+ 
+# Uses port which is used by the actual application
 EXPOSE 3000
-CMD ["npm", "start"]
+ 
+# Finally runs the application
+CMD [ "npm", "start" ]
