--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -32,4 +32,7 @@ jobs:
           node-version: 14.x
       - run: npm ci
       - run: npm run build
-      - run: FIREBASE_TOKEN=${{ secrets.FIREBASE_TOKEN }} npm run deploy
+      - name: Deploy to Firebase
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: npm run deploy
