--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
     "react-select": "^3.1.0",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.0",
-    "ts-jest": "^26.4.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -78,7 +77,8 @@
     "lint-staged": "^10.4.0",
     "prettier": "2.1.2",
     "react-is": "^16.13.1",
-    "shelljs": "^0.8.4"
+    "shelljs": "^0.8.4",
+    "ts-jest": "^26.4.4"
   },
   "husky": {
     "hooks": {
