--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,6 +77,7 @@
     "lint-staged": "^10.4.0",
     "prettier": "2.1.2",
     "react-is": "^16.13.1",
+    "react-select-event": "^5.1.0",
     "shelljs": "^0.8.4",
     "ts-jest": "^26.4.4"
   },
