--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.21",
     "@types/styled-components": "^5.1.3",
+    "axios": "^0.21.1",
     "d3": "^6.2.0",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
