--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:ci": "CI=1 react-scripts test --verbose --color --coverage",
+    "test:ci": "CI=1 react-scripts test --verbose --color --coverage --testPathIgnorePatterns DjangoApiClient",
     "test:all": "react-scripts test --watchAll --verbose",
     "eject": "react-scripts eject",
     "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
