--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,15 +4,17 @@ black==20.8b1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
-coverage~=5.3
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.3
 Django==3.1
+django-cors-headers==3.6.0
 django-filter==2.4.0
 django-rest-swagger==2.2.0
 djangorestframework==3.11.1
 drf-yasg==1.17.1
 idna==2.10
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==2.11.2
 lxml==4.5.2
@@ -20,14 +22,18 @@ MarkupSafe==1.1.1
 mypy-extensions==0.4.3
 numpy==1.19.2
 openapi-codec==1.3.2
+packaging==20.8
 pandas==1.1.2
 pathspec==0.8.0
 psycopg2==2.8.6
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 pytz==2020.1
 regex==2020.7.14
 requests==2.24.0
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 simplejson==3.17.2
 six==1.15.0
 SQLAlchemy==1.3.19
