--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/styled-components": "^5.1.3",
     "axios": "^0.21.1",
     "d3": "^6.2.0",
+    "lodash": "^4.17.20",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -73,6 +74,7 @@
     "@storybook/node-logger": "^6.0.22",
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.22",
+    "@types/lodash": "^4.14.167",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.4.0",
     "eslint": "^6.6.0",
