--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/utils": "^4.11.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^7.2.1",
     "@types/d3": "^5.16.3",
     "@types/jest": "^24.9.1",
@@ -17,6 +18,7 @@
     "@types/react-select": "^3.0.21",
     "@types/styled-components": "^5.1.3",
     "d3": "^6.2.0",
+    "enzyme": "^3.11.0",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -30,7 +32,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "test:ci": "CI=1 react-scripts test --verbose --color --coverage",
     "test:all": "react-scripts test --watchAll --verbose",
     "eject": "react-scripts eject",
@@ -72,6 +74,7 @@
     "chromatic": "^5.4.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "firebase-tools": "^8.16.2",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
