--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14.15-alpine
  
 # A directory within the virtualized Docker environment
 # Becomes more relevant when using Docker Compose later
-WORKDIR /usr/src/app
+WORKDIR /app
  
 # Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
