--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:ci": "CI=1 react-scripts test --verbose --color --coverage --testPathIgnorePatterns DjangoApiClient",
-    "test:all": "react-scripts test --watchAll --verbose",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen to the end of all the test scripts",
+    "test:ci": "CI=1 react-scripts test --env=jest-environment-jsdom-sixteen to the end of all the test scripts --verbose --color --coverage --testPathIgnorePatterns DjangoApiClient",
+    "test:all": "react-scripts test --env=jest-environment-jsdom-sixteen to the end of all the test scripts --watchAll --verbose",
     "eject": "react-scripts eject",
     "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "check-types": "tsc --noemit",
