--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,7 +42,10 @@ services:
       - "3000:3000"
     volumes:
       - ../frontend:/app
+      - /app/node_modules
     stdin_open: true
+    environment:
+      REACT_APP_BASE_API_URL: http://localhost:8000/api/v1/jobs
 
 volumes:
   db-data:
