--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,6 @@
     "@types/styled-components": "^5.1.3",
     "axios": "^0.21.1",
     "d3": "^6.2.0",
-    "enzyme": "^3.11.0",
     "lodash": "^4.17.20",
     "material-table": "^1.69.1",
     "react": "^16.13.1",
@@ -64,6 +63,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      ".*stories.tsx?"
     ]
   },
   "devDependencies": {
