--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
+    "react-select-virtualized": "^2.5.11",
+    "react-virtualized": "^9.22.3",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.0",
     "typescript": "^3.7.5"
