--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install requirements
-        run: pip install -r requirements.txt
+        run: pip install -r api/requirements.txt
       - name: Run coverage
         env:
           DB_HOST: 127.0.0.1
