--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -1,7 +1,6 @@
-FROM node:14.15-alpine
+FROM node:14.15-alpine as debug
  
-# A directory within the virtualized Docker environment
-# Becomes more relevant when using Docker Compose later
+# Project root
 WORKDIR /app
  
 # Copies package.json and package-lock.json to Docker environment
@@ -13,8 +12,12 @@ RUN npm install
 # Copies everything over to Docker environment
 COPY . .
  
-# Uses port which is used by the actual application
+# Exposes port which is used by the actual application
 EXPOSE 3000
  
 # Finally runs the application
 CMD [ "npm", "start" ]
+
+FROM debug as release
+
+RUN npm run build
