--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -20,4 +20,7 @@ CMD [ "npm", "start" ]
 
 FROM debug as release
 
+ARG REACT_APP_BASE_API_URL
+ENV REACT_APP_BASE_API_URL $REACT_APP_BASE_API_URL
+
 RUN npm run build
