Create production deployment scripts

--- a/stack/gateway/Dockerfile
+++ b/stack/gateway/Dockerfile
@@ -1,4 +1,4 @@
 FROM staticfloat/nginx-certbot:latest
 
-COPY --from=jobhopper-frontend-release /app/build /usr/share/nginx/html
+COPY --from=frontend-release /app/build /usr/share/nginx/html
 COPY uwsgi_params .
