Do not build image in prod-deploy

--- a/stack/compose/build.prod.yml
+++ b/stack/compose/build.prod.yml
@@ -17,5 +17,7 @@ services:
 
   api:
     build:
+      context: ../../api
+      dockerfile: docker/Dockerfile
       target: release
     image: jobhopper/api-release
