--- a/stack/compose/deploy.dev.yml
+++ b/stack/compose/deploy.dev.yml
@@ -7,6 +7,8 @@ services:
 
   api:
     build:
+      context: ../../api
+      dockerfile: docker/Dockerfile
       target: debug
     image: api-debug
     volumes:
