--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.2",
     "react-select": "^3.1.0",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.0",
@@ -88,8 +88,8 @@
     "@types/xmldom": "^0.1.30",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.4.0",
-    "eslint": "^6.6.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "^7.20.0",
+    "eslint-config-react-app": "^6.0.0",
     "firebase-tools": "^8.16.2",
     "husky": "^4.3.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
