--- a/frontend/package.json
+++ b/frontend/package.json
@@ -88,6 +88,7 @@
     "@types/xmldom": "^0.1.30",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "firebase-tools": "^8.16.2",
