Add smart search parameters

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ DB_USER='jobuser'
 DB_PASSWORD='jobuser'
 DB_HOST='127.0.0.1'
 DB_EXTERNAL_PORT=5432
+
+ONET_USERNAME = 'jobhopper_aballslab'
+ONET_PASSWORD = '<replace with password>'
