add onet parameters to docker compose common file

--- a/stack/compose/common.yml
+++ b/stack/compose/common.yml
@@ -13,6 +13,8 @@ services:
 
   api:
     environment:
+      ONET_USERNAME: ${ONET_USERNAME}
+      ONET_PASSWORD: ${ONET_PASSWORD}
       DB_USER: postgres
       DB_PASSWORD: password
       DB_NAME: jobhopper
