Tiered smart-search backend with O*NET responses and fuzzy matching

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -31,6 +31,7 @@ python-dateutil==2.8.1
 python-decouple==3.4
 python-dotenv==0.14.0
 pytz==2020.1
+rapidfuzz==1.1.2
 regex==2020.7.14
 requests==2.24.0
 ruamel.yaml==0.16.12
