adds 'allow unreachable code' to tsconfig (previously, was deleting chunks of code on save if brackets not closed)

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,8 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": "./",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": true
   },
   "include": ["src"]
 }
